# cal

./: .env  CMakeLists.txt  Dockerfile  databasestructure.md  db  db.cpp  docker-compose.yaml  dockernotes.md  howtorundocker.md  notes.md
blyat/src/: CMakeLists.txt
notes/: dockernotes.md
src/: CMakeLists.txt  hellobitches.cpp  hi.cpp
